--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,5 +1,3 @@
-@import 'hoc/_index';
-@import 'game/_index';
 @import 'overview';
 @import 'home';
 @import 'calendar';
@@ -17,3 +15,4 @@
 @import 'dice-roller';
 @import 'mobile-nav';
 @import 'footer';
+@import 'game';
