Update game styles.

--- a/src/styles/components/game.scss
+++ b/src/styles/components/game.scss
@@ -1,12 +1,16 @@
+// =============================
+// Game
+// =============================
+
 .Game {
   width: 100%;
   height: 100%;
 }
 
 .Game-map {
-
+  display: flex;
 }
 
-.Game-Map-grid {
+.Game-map-grid {
   
 }
