--- a/src/styles/components/game/game.scss
+++ b/src/styles/components/game/game.scss
@@ -5,12 +5,10 @@
 .Game {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .Game-map {
-  display: flex;
-}
-
-.Game-map-grid {
-  
 }
